--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,55 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    height: 100%;
+}
+
+.main-container {
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px;
+}
+
+.footer {
+    position: relative;
+    margin-bottom: -16px;
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+    color: white;
+    height: 5%;
+}
+
+.miembro-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 16px;
+}
+
+.miembro {
+    margin-bottom: 24px;
+    width: 32%;
+}
+
+.jumbotron {
+    background-color: white;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.navbar-custom {
+    height: 75px;
+    font-size: 20px;
+}
+
+.footer p {
+    padding: 5px;
+}
+
+h2 {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: center;
+}
