--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,3 +1,6 @@
+<h3>Contacta con nosotros</h3>
+<hr>
+
 <form (ngSubmit)="enviar(form)" #form="ngForm">
     <div class="form-group">
         <label>Email</label>
