Rutas a web y repo

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,12 @@
                 <a class="nav-link" routerLink="inicio">Inicio</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
+                <a href="https://comfystream-frontend-s1.web.app" target="_blank" class="nav-link">Web</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a href="https://github.com/ComfyStream" target="_blank" class="nav-link">Repositorio</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="contacto">Contacto</a>
             </li>
         </ul>
