--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,10 +8,13 @@
                 <a class="nav-link" routerLink="inicio">Inicio</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a href="https://comfystream-frontend-s1.web.app" target="_blank" class="nav-link">Web</a>
+                <a href="https://comfystream-s2.web.app/" target="_blank" class="nav-link">Web</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a href="https://github.com/ComfyStream" target="_blank" class="nav-link">Repositorio</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a href="https://trello.com/b/MzNEBi5t/comfystream" target="_blank" class="nav-link">Tareas</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="contacto">Contacto</a>
