Navbar para movil

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron mt-5">
     <h1 class="display-4 text-center mb-4">ComfyStream</h1>
     <p class="lead">
         ¡Bienvenido a ComfyStream!, la plataforma de conferencias online donde podrás compartir tus conocimientos y adquirir nuevos organizando o asistiendo a charlas de profesionales sobre temas tan diversos como economía, ciencia, educación, emprendimiento,
