--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 navbar-custom">
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <div class="navbar-nav mr-auto mt-2 mt-lg-0">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 fixed-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="navbar-nav mr-auto">
             <a class="navbar-brand" href="#">ComfyStream</a>
         </div>
-        <ul class="navbar-nav my-2 my-lg-0">
+        <ul class="navbar-nav">
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="inicio">Inicio</a>
             </li>
