--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" routerLink="lanzamiento">Lanzamiento</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a href="https://comfystream-s3.web.app/" target="_blank" class="nav-link">Web</a>
+                <a href="https://comfystream-ppl.web.app/" target="_blank" class="nav-link">Web</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a href="https://github.com/ComfyStream" target="_blank" class="nav-link">Repositorio</a>
